<resources>
    <string name="settings">Settings</string>
    <string name="minibar">Minibar</string>
    <string name="edit">Edit</string>
    <string name="info">Info</string>
    <string name="uninstall">Uninstall</string>
    <string name="remove">Remove</string>
    <string name="home">Home</string>
    <string name="action">Action</string>
    <string name="lock">Lock</string>
    <string name="widget">Widget</string>
    <string name="toast_not_enough_space">Not enough space.</string>
    <string name="toast_app_uninstalled">App uninstalled.</string>
    <string name="toast_free_ram">Free Memory: %1$d MB. Saved %2$d MB.</string>
    <string name="toast_free_all_ram">Free Memory: %1$d MB. Your RAM is in best state.</string>
    <string name="toast_device_admin_required">Please enable device administration.</string>
    <string name="about_team" translatable="false">Open Launcher Team</string>
    <string name="about_libs">Open Source Libraries</string>
    <string name="about_rate">Rate</string>
    <string name="about_credit">Contributors</string>
    <string name="about_credit_text_all_contributors">All contributors</string>
    <string name="about_credit_text_bennykok" translatable="false">Project starter</string>
    <string name="about_credit_text_chris_debrodie" translatable="false">Helped a lot with bugs and suggestions</string>
    <string name="about_credit_text_gaukler_faun" translatable="false">Added some settings, German translation</string>
    <string name="about_credit_text_gsantner" translatable="false">Maintainer, German translations</string>
    <string name="about_credit_text_dkanada" translatable="false">Maintainer, Database</string>
    <string name="pref_title__desktop">Desktop</string>
    <string name="pref_title__dock">Dock</string>
    <string name="pref_title__app_drawer">App Drawer</string>
    <string name="pref_title__gestures">Gestures</string>
    <string name="pref_title__icons">Icons</string>
    <string name="pref_title__miscellaneous">Miscellaneous</string>
    <string name="pref_title__about">About</string>
    <string name="pref_title__size">Size</string>
    <string name="pref_title__style">Style</string>
    <string name="pref_title__appearance">Appearance</string>
    <string name="pref_title__color">Colors</string>
    <string name="pref_title__search_bar">Search Bar</string>
    <string name="pref_title__desktop_style">Style</string>
    <string name="pref_summary__desktop_style">Choose between a normal desktop and showing all installed apps.</string>
    <string name="pref_title__minibar" translatable="false">@string/minibar</string>
    <string name="pref_summary__minibar">Configure the order and visibility of minibar items.</string>
    <string name="pref_title__search_bar_enable">Search Bar</string>
    <string name="pref_summary__search_bar_enable">Display a search bar above the desktop.</string>
    <string name="pref_title__desktop_fullscreen">Fullscreen</string>
    <string name="pref_summary__desktop_fullscreen">Enable fullscreen for the desktop.</string>
    <string name="pref_title__desktop_show_position_indicator">Position Indicator</string>
    <string name="pref_summary__desktop_show_position_indicator">Show the page indicator below the desktop.</string>
    <string name="pref_title__desktop_show_label">Show Labels</string>
    <string name="pref_summary__desktop_show_label">Show item labels below their icons.</string>
    <string name="pref_title__search_bar_base_uri">Search URI</string>
    <string name="pref_summary__search_bar_base_uri">Set the URI used for web searches.</string>
    <string name="pref_dialog__search_bar_base_uri">Enter the URI that should be used for web searches. The tag {query} can be used as
      placeholder for the search query, in case no placeholder is used the search query will be appended at the end of the URI.</string>
    <string name="pref_default__search_bar_base_uri" translatable="false">https://www.startpage.com/do/search?query={query}</string>
    <string name="pref_title__desktop_background_color">Background</string>
    <string name="pref_title__desktop_folder_color">Folder</string>
    <string name="pref_title__minibar_background_color" translatable="false">@string/minibar</string>
    <string name="pref_title__dock_size" translatable="false">@string/pref_title__size</string>
    <string name="pref_summary__dock_size">Set the dock size.</string>
    <string name="pref_title__dock_show_label">Show Labels</string>
    <string name="pref_summary__dock_show_label">Show item labels below their icons.</string>
    <string name="pref_title__dock_background_color">Background</string>
    <string name="pref_title__drawer_style">Style</string>
    <string name="pref_summary__drawer_style">Choose between a paged and vertical app drawer.</string>
    <string name="pref_title__hide_apps">Hide Apps</string>
    <string name="pref_summary__hide_apps">Hide selected apps from launcher.</string>
    <string name="pref_title__drawer_show_card_view">Card View</string>
    <string name="pref_summary__drawer_show_card_view">Show a card view above the drawer background.</string>
    <string name="pref_title__drawer_remember_position">Remember Last Page</string>
    <string name="pref_summary__drawer_remember_position">Keep track of the current app drawer page.</string>
    <string name="pref_title__drawer_show_position_indicator">Position Indicator</string>
    <string name="pref_summary__drawer_show_position_indicator">Show the page indicator or scrollbar depending on the style.</string>
    <string name="pref_title__drawer_show_label">Show Labels</string>
    <string name="pref_summary__drawer_show_label">Show item labels below their icons.</string>
    <string name="pref_title__drawer_background_color">Background</string>
    <string name="pref_title__drawer_card_color">Card View</string>
    <string name="pref_title__drawer_label_color">Label</string>
    <string name="pref_title__dock_swipe_up">Swipe Drawer Quickly</string>
    <string name="pref_summary__dock_swipe_up">Swipe upwards on the dock to open the app drawer.</string>
    <string name="pref_title__desktop_double_tap">Double Tap</string>
    <string name="pref_title__desktop_swipe_up">Swipe Upwards</string>
    <string name="pref_title__desktop_swipe_down">Swipe Downwards</string>
    <string name="pref_title__desktop_pinch">Pinch</string>
    <string name="pref_title__desktop_unpinch">Unpinch</string>
    <string name="pref_title__desktop_gesture_feedback">Feedback</string>
    <string name="pref_title__icon_size" translatable="false">@string/pref_title__size</string>
    <string name="pref_summary__icon_size">Size of all app icons.</string>
    <string name="pref_title__icon_pack">Icon Pack</string>
    <string name="pref_summary__icon_pack">Select an installed icon pack.</string>
    <string name="pref_title__backup">Backup</string>
    <string name="pref_summary__backup">Backup and restore your settings.</string>
    <string name="pref_title__clear_database">Clear Database</string>
    <string name="pref_summary__clear_database">Delete the data for the dock and desktop to fix issues.</string>
    <string name="pref_title__restart">Restart</string>
    <string name="pref_summary__restart">Restart the launcher in case it\'s misbehaving.</string>
    <string name="vertical_scroll_drawer">Vertical</string>
    <string name="horizontal_paged_drawer">Paged</string>
    <string name="desktop_mode_normal">Normal</string>
    <string name="desktop_mode_show_all_apps">Show All Apps</string>
    <string name="pref_key__desktop_columns" translatable="false">pref_key__desktop_columns</string>
    <string name="pref_key__desktop_rows" translatable="false">pref_key__desktop_rows</string>
    <string name="pref_key__desktop_style" translatable="false">pref_key__desktop_style</string>
    <string name="pref_key__minibar" translatable="false">pref_key__minibar</string>
    <string name="pref_key__minibar_enable" translatable="false">pref_key__minibar_enable</string>
    <string name="pref_key__minibar_arrangement" translatable="false">pref_key__minibar_arrangement</string>
    <string name="pref_key__search_bar_enable" translatable="false">pref_key__search_bar_enable</string>
    <string name="pref_key__desktop_fullscreen" translatable="false">pref_key__desktop_fullscreen</string>
    <string name="pref_key__desktop_show_position_indicator" translatable="false">pref_key__desktop_show_position_indicator</string>
    <string name="pref_key__desktop_show_label" translatable="false">pref_key__desktop_show_label</string>
    <string name="pref_key__search_bar_base_uri" translatable="false">pref_key__search_bar_base_uri</string>
    <string name="pref_key__desktop_background_color" translatable="false">pref_key__desktop_background_color</string>
    <string name="pref_key__desktop_folder_color" translatable="false">pref_key__desktop_folder_color</string>
    <string name="pref_key__minibar_background_color" translatable="false">pref_key__minibar_background_color</string>
    <string name="pref_key__dock_enable" translatable="false">pref_key__dock_enable</string>
    <string name="pref_key__dock_size" translatable="false">pref_key__dock_size</string>
    <string name="pref_key__dock_show_label" translatable="false">pref_key__dock_show_label</string>
    <string name="pref_key__dock_background_color" translatable="false">pref_key__dock_background_color</string>
    <string name="pref_key__drawer_columns" translatable="false">pref_key__drawer_columns</string>
    <string name="pref_key__drawer_rows" translatable="false">pref_key__drawer_rows</string>
    <string name="pref_key__drawer_style" translatable="false">pref_key__drawer_style</string>
    <string name="pref_key__hidden_apps" translatable="false">pref_key__hidden_apps</string>
    <string name="pref_key__drawer_show_card_view" translatable="false">pref_key__drawer_show_card_view</string>
    <string name="pref_key__drawer_remember_position" translatable="false">pref_key__drawer_remember_position</string>
    <string name="pref_key__drawer_show_position_indicator" translatable="false">pref_key__drawer_show_position_indicator</string>
    <string name="pref_key__drawer_show_label" translatable="false">pref_key__drawer_show_label</string>
    <string name="pref_key__drawer_background_color" translatable="false">pref_key__drawer_background_color</string>
    <string name="pref_key__drawer_card_color" translatable="false">pref_key__drawer_card_color</string>
    <string name="pref_key__drawer_label_color" translatable="false">pref_key__drawer_label_color</string>
    <string name="pref_key__dock_swipe_up" translatable="false">pref_key__dock_swipe_up</string>
    <string name="pref_key__desktop_double_tap" translatable="false">pref_key__desktop_double_tap</string>
    <string name="pref_key__desktop_swipe_up" translatable="false">pref_key__desktop_swipe_up</string>
    <string name="pref_key__desktop_swipe_down" translatable="false">pref_key__desktop_swipe_down</string>
    <string name="pref_key__desktop_pinch" translatable="false">pref_key__desktop_pinch</string>
    <string name="pref_key__desktop_unpinch" translatable="false">pref_key__desktop_unpinch</string>
    <string name="pref_key__desktop_gesture_feedback" translatable="false">pref_key__desktop_gesture_feedback</string>
    <string name="pref_key__cat_desktop" translatable="false">pref_key__cat_desktop</string>
    <string name="pref_key__cat_dock" translatable="false">pref_key__cat_dock</string>
    <string name="pref_key__cat_app_drawer" translatable="false">pref_key__cat_app_drawer</string>
    <string name="pref_key__cat_gestures" translatable="false">pref_key__cat_gestures</string>
    <string name="pref_key__cat_icons" translatable="false">pref_key__cat_icons</string>
    <string name="columns">Columns</string>
    <string name="rows">Rows</string>
</resources>