<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:sample="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:title="@string/pref_title__app_drawer">

    <PreferenceCategory android:title="@string/pref_title__size">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="4"
            android:key="@string/pref_key__drawer_columns"
            android:title="@string/columns"
            sample:msbp_minValue="2"
            sample:msbp_maxValue="20"
            sample:msbp_dialogEnabled="false" />

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="5"
            android:key="@string/pref_key__drawer_rows"
            android:title="@string/rows"
            sample:msbp_minValue="2"
            sample:msbp_maxValue="20"
            sample:msbp_dialogEnabled="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title__appearance">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/entries__drawer_styles"
            android:entryValues="@array/values__zero_to_one"
            android:key="@string/pref_key__drawer_style"
            android:summary="@string/pref_summary__drawer_style"
            android:title="@string/pref_title__drawer_style" />

        <Preference
            android:key="@string/pref_key__hidden_apps"
            android:summary="@string/pref_summary__hide_apps"
            android:title="@string/pref_title__hide_apps" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key__drawer_show_card_view"
            android:summary="@string/pref_summary__drawer_show_card_view"
            android:title="@string/pref_title__drawer_show_card_view" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key__drawer_remember_position"
            android:summary="@string/pref_summary__drawer_remember_position"
            android:title="@string/pref_title__drawer_remember_position" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key__drawer_show_position_indicator"
            android:summary="@string/pref_summary__drawer_show_position_indicator"
            android:title="@string/pref_title__drawer_show_position_indicator" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key__drawer_show_label"
            android:summary="@string/pref_summary__drawer_show_label"
            android:title="@string/pref_title__drawer_show_label" />

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="13"
            android:key="@string/pref_key__drawer_label_font_size"
            android:title="@string/pref_title__drawer_label_font_size"
            sample:msbp_minValue="7"
            sample:msbp_maxValue="20"
            sample:msbp_dialogEnabled="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title__color">

        <com.flask.colorpicker.ColorPickerPreference
            android:defaultValue="@color/transparent"
            android:key="@string/pref_key__drawer_background_color"
            android:title="@string/pref_title__drawer_background_color"
            app:lightnessSlider="true"
            app:alphaSlider="true" />

        <com.flask.colorpicker.ColorPickerPreference
            android:defaultValue="@color/darkTransparent"
            android:key="@string/pref_key__drawer_card_color"
            android:title="@string/pref_title__drawer_card_color"
            app:lightnessSlider="true"
            app:alphaSlider="true" />

        <com.flask.colorpicker.ColorPickerPreference
            android:defaultValue="@color/white"
            android:key="@string/pref_key__drawer_label_color"
            android:title="@string/pref_title__drawer_label_color"
            app:lightnessSlider="true"
            app:alphaSlider="true" />

        <com.flask.colorpicker.ColorPickerPreference
            android:defaultValue="@color/colorPrimaryDark"
            android:key="@string/pref_key__drawer_fast_scroll_color"
            android:title="@string/pref_title__drawer_fast_scroll_color"
            app:lightnessSlider="true"
            app:alphaSlider="true" />

    </PreferenceCategory>

</PreferenceScreen>
