<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key__dock_enable"
        android:title="Enable dock" />

    <PreferenceCategory android:title="@string/pref_title__size">

        <com.benny.openlauncher.widget.NumberPickerPreference
            android:defaultValue="5"
            android:key="@string/pref_key__dock_size"
            android:summary="@string/pref_summary__dock_size"
            android:title="@string/pref_title__dock_size"
            app:maxValue="20"
            app:minValue="2" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title__appearance">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key__dock_show_label"
            android:summary="@string/pref_summary__dock_show_label"
            android:title="@string/pref_title__dock_show_label" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title__color">

        <com.jaredrummler.android.colorpicker.ColorPreference
            android:defaultValue="@color/transparent"
            android:key="@string/pref_key__dock_background_color"
            android:title="@string/pref_title__dock_background_color"
            app:cpv_dialogTitle="@string/pref_title__dock_background_color"
            app:cpv_showAlphaSlider="true" />

    </PreferenceCategory>

</PreferenceScreen>